Fix orientation change issue and jumping view issue.

--- a/src/components/PhaseAndLibration.css
+++ b/src/components/PhaseAndLibration.css
@@ -1,4 +1,22 @@
 .canvas {
     width: 100%;
-    height: 50vh;
+    height: 334px;
+}
+
+@media only screen and (min-height: 768px) {
+    .canvas {
+        height: 384px;
+    }
+}
+
+@media only screen and (min-height: 900px) {
+    .canvas {
+        height: 450px;
+    }
+}
+
+@media only screen and (min-height: 1024px) {
+    .canvas {
+        height: 512px;
+    }
 }
